<resources>
    <string name="app_name">Life Game Hexagon</string>
    <string name="field_type">field type</string>
    <string name="max_for_live">max for live</string>
    <string name="min_for_live">min for live</string>
    <string name="for_new">for new</string>
    <string name="max_age">max age</string>
    <string name="start">start</string>
    <string name="step">step</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="clear">clear</string>
    <string name="save">save</string>
    <string name="load">load</string>
    <string name="settings">settings</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="conways">Conway\'s</string>
    <string name="hexagon">hexagon</string>
    <string name="square">square</string>
    <string name="cell_shape">cell shape</string>
    <string name="delay">delay (ms)</string>
    <string name="items">items</string>
    <string name="incorrect_input">incorrect input</string>
    <string name="number_required">number from %1$d to %2$d is required</string>
    <string name="zero_means_infinity">zero means infinity</string>
    <string name="file_chooser_header">select file</string>
    <string name="install_file_manager">please install a file manager</string>
    <string name="input_file_name">input file name</string>
    <string name="file_saved">file \'%s\' successfully saved</string>
    <string name="file_not_saved">file \'%s\' not saved</string>
    <string name="file_exists">file \'%s\' already exists. replace it?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="random_cells">random elements (%, from 0 to 100)</string>
    <string name="index_is_too_big">an index used in file \'%1$s\' is too big for field size %2$d x %3$d</string>
    <string name="random">random</string>
    <string name="rule">rule</string>
    <string name="for_live">neighbours for survive</string>
    <string name="for_born">neighbours for born</string>
    <string name="supported_files">only %s files supported</string>
    <string name="load_file_error">load file error</string>
    <string name="game_field_size">game field size (cells)</string>
    <string name="width">width</string>
    <string name="height">height</string>
    <string name="settings_ad_unit_id">ca-app-pub-5032577592225197/4327949133</string>
    <string name="game_field_ad_unit_id">ca-app-pub-5032577592225197/9895879868</string>
    <string name="file_select_ad_unit_id">ca-app-pub-5032577592225197/3179530757</string>
    <string name="add_mob_app_code">ca-app-pub-5032577592225197~8419146663</string>
</resources>
